fabric-1.0/local/cli.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hyperledger-fabric-cli
  labels:
    app: hyperledger
    role: cli
spec:
  replicas: 1
  template:
    metadata:
      name: hyperledger-cli-pod
      labels:
        role: cli
    spec:
      restartPolicy: Always
      containers:
        - name: cli-container
          imagePullPolicy: IfNotPresent
          image: hyperledger/fabric-tools:latest #The image is changed to fabric-tools in latest version of e2e_cli samples
          workingDir: /opt/gopath/src/github.com/hyperledger/fabric/peer
          tty: true
          volumeMounts:
            - mountPath: /opt/gopath/src/github.com/hyperledger/fabric/peer/crypto/
              name: crypto
            - mountPath: /opt/gopath/src/github.com/hyperledger/fabric/peer/scripts/
              name: scripts
            - mountPath: /opt/gopath/src/github.com/hyperledger/fabric/peer/channel-artifacts
              name: channel-artifacts
            - mountPath: /etc/hyperledger/fabric/configtx.yaml
              name: configtx
            - mountPath: /etc/hyperledger/fabric/crypto-config.yaml
              name: crypto-config
          command:
            # - "cd /opt/gopath/src/github.com/hyperledger/fabric/peer &&"
            - /bin/bash
            - -c
            - 'while true; do sleep 20170504; done'
      volumes:
        - name: crypto
          hostPath:
            path: /data/driving-files/crypto-config
        - name: scripts
          hostPath:
            path: /data/driving-files/scripts
        - name: channel-artifacts
          hostPath:
            path: /data/driving-files/channel-artifacts
        - name: configtx
          hostPath:
            path: /data/driving-files/configtx.yaml
        - name: crypto-config
          hostPath:
            path: /data/driving-files/crypto-config.yaml
