fabric-1.0/local/orderer.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hyperledger-orderer
  labels:
    app: hyperledger
    role: orderer
spec:
  replicas: 1
  template:
    metadata:
      name: hyperledger-orderer-pod
      labels:
        role: orderer
    spec:
      restartPolicy: Always
      containers:
        - name: orderer-container
          imagePullPolicy: Never
          image: hyperledger/fabric-orderer:x86_64-1.0.0-rc1
          volumeMounts:
            - mountPath: /var/hyperledger/orderer
              name: orderer-vol
          ports:
            - containerPort: 7050
          command:
            - orderer
            - start
      volumes:
        - name: orderer-vol
          hostPath:
            path: /data/driving-files/orderer
---
apiVersion: v1
kind: Service
metadata:
  name: orderer-service
  labels:
    app: hyperledger-orderer
spec:
  type: NodePort
  ports:
    - name: "7050"
      targetPort: 7050
      port: 7050
      nodePort: 30001
  selector:
    role: orderer
