fabric-1.0/local/peer2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hyperledger-peer0-org2
  labels:
    app: hyperledger
    role: peer
    peer-id: "0"
    org: "2"
spec:
  replicas: 1
  template:
    metadata:
      name: hyperledger-peer-pod
      labels:
        role: peer
        peer-id: "0"
        org: "2"
    spec:
      restartPolicy: Always
      containers:
        - name: peer0-org2-container
          imagePullPolicy: Never
          image: hyperledger/fabric-peer:latest
          volumeMounts:
            - mountPath: /etc/hyperledger/fabric
              name: fabric-vol
          ports:
            - containerPort: 7050
            - containerPort: 7051
            - containerPort: 7052
            - containerPort: 7053
            # - containerPort: 7054
            # - containerPort: 7055
            # - containerPort: 7056
            # - containerPort: 7057
            # - containerPort: 7058
            # - containerPort: 7059
          command:
            - peer
            - node
            - start
      volumes:
        - name: fabric-vol
          hostPath:
            path: /data/fabric-peer
---
apiVersion: v1
kind: Service
metadata:
  name: peer0-org2
  labels:
    app: hyperledger-peer
spec:
  type: ClusterIP
  ports:
    - name: "7050"
      targetPort: 7050
      port: 7050
    - name: "7051"
      targetPort: 7051
      port: 7051
    - name: "7052"
      targetPort: 7052
      port: 7052
    - name: "7053"
      targetPort: 7053
      port: 7053
  selector:
    role: peer
    peer-id: "0"
    org: "2"
