fabric-1.0/local/kube-dns-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-dns-ingress
spec:
  rules:
    - host: dns.192.168.99.100.nip.io
      http:
        paths:
          - backend:
              serviceName: kube-dns
              servicePort: 53
